--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+.cache/
+.vite/
+
+# Local files
 *.local
 
 # Editor directories and files
@@ -22,3 +30,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# AWS / Keys
+*.pem
+*.key
+*.crt
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
